--- a/experiment/simulation/css/query.css
+++ b/experiment/simulation/css/query.css
@@ -55,7 +55,7 @@ em:current font size
     height: 2.8rem;
   }
   canvas#simscreen {
-    /* margin-left: 230px; */
+    margin-left: 230px;
   }
   div#commentboxright {
     left: 340px;
@@ -147,7 +147,7 @@ em:current font size
     border-top: 1px solid rgba(177, 176, 176, 0.855);
   }
   canvas#simscreen {
-    /* margin-left: 20px; */
+    margin-left: 20px;
   }
   div#commentboxright {
     left: 300px;
@@ -172,7 +172,7 @@ em:current font size
     border-top: 1px solid rgba(177, 176, 176, 0.855);
   }
   canvas#simscreen {
-    /* margin-left: 20px; */
+    margin-left: 20px;
   }
   div#commentboxright {
     left: 200px;
@@ -199,7 +199,7 @@ em:current font size
   }
   .logo-div {
     width: 8.5rem;
-    /* padding: 0.8rem 0 0.8rem 3.3rem; */
+    padding: 0.8rem 0 0.8rem 3.3rem;
   }
   .main__task-div:nth-child(4) {
     margin-bottom: 6rem;
@@ -218,7 +218,7 @@ em:current font size
     border-top: 1px solid rgba(177, 176, 176, 0.855);
   }
   canvas#simscreen {
-    /* margin-left: 20px; */
+    margin-left: 20px;
   }
   div#commentboxright {
     left: 150px;
@@ -230,20 +230,17 @@ em:current font size
 /* **************************** */
 @media (max-width: 34em) {
   .title-div-container {
-    /* padding: 0.5rem 0.5rem 0rem 0.5rem; */
+    padding: 0.5rem 0.5rem 0rem 0.5rem;
   }
   .container {
-    /* padding: 0.5rem; */
+    padding: 0.5rem;
     gap: 1rem;
   }
 
-  .logo-div {
-    width: 4rem;
-  }
   .title-div h1 {
     padding: 0.2rem;
 
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     /* text-align: center; */
   }
   .div__control {
@@ -290,7 +287,7 @@ em:current font size
     font-size: 1rem;
   }
   canvas#simscreen {
-    /* margin-left: 20px; */
+    margin-left: 20px;
   }
   div#commentboxleft {
     font-size: 14px;
