--- a/experiment/simulation/css/style.css
+++ b/experiment/simulation/css/style.css
@@ -99,6 +99,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
 }
 .tool-list span {
   display: inline-block;
