Modified the scrolling feature of Simulator Window

--- a/experiment/simulation/css/query.css
+++ b/experiment/simulation/css/query.css
@@ -9,12 +9,10 @@ em:current font size
 /* Below 1344px (Smaller Desktops) */
 /* **************************** */
 
-@media (min-width: 1200px) {
-  canvas#simscreen {
-    margin-left: 200px;
-  }
-  div#commentboxright {
-    left: 250px;
+@media (max-width: 1344px) {
+  body {
+    max-width: 120rem;
+    margin: 0 auto;
   }
 }
 
@@ -24,8 +22,8 @@ em:current font size
 
 @media (max-width: 75em) {
   body {
-    width: 100%;
-    margin: unset;
+    max-width: 120rem;
+    margin: 0 auto;
   }
   .title-div h1 {
     font-size: 2.5rem;
@@ -44,21 +42,15 @@ em:current font size
     width: 3rem;
     height: 3rem;
   }
-  .canvas {
+  /* .canvas {
     display: block;
     width: 100%;
     height: 100%;
-    /* background-color: red; */
-  }
+    /* background-color: red; 
+  } */
   .div__control img {
     width: 3rem;
     height: 2.8rem;
-  }
-  canvas#simscreen {
-    margin-left: 230px;
-  }
-  div#commentboxright {
-    left: 340px;
   }
 }
 
@@ -67,6 +59,10 @@ em:current font size
 /* **************************** */
 
 @media (max-width: 59em) {
+  body {
+    width: 100%;
+    margin: 0;
+  }
   .tool-link:link,
   .tool-link:visited {
     gap: 0.5rem;
@@ -94,15 +90,10 @@ em:current font size
     justify-content: space-evenly;
     border-radius: 0;
     scroll-behavior: auto;
-    /* background: linear-gradient(
-      to bottom,
-      #f7c3a9da,
-      #c17a53da,
-      #c17a53da,
-      #c17a53da,
-      #c17a53da,
-      #311b10da
-    ); */
+  }
+  .main {
+    grid-column: 1/-1;
+    margin: 0.25rem;
   }
   .tool-menu {
     list-style: none;
@@ -124,33 +115,18 @@ em:current font size
     width: 3rem;
     height: 3rem;
   }
-  .main__task-div:nth-child(4) {
-    margin-bottom: 6rem;
-  }
+  /*
   .canvas {
     display: block;
     width: 100%;
     height: 100%;
-    /* background-color: red; */
-  }
+    background-color: red; 
+  }*/
   .main-section {
     grid-template-columns: 1fr;
   }
   .canvas__div {
     grid-template-columns: 1fr;
-  }
-  .canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-top: 1px solid rgba(177, 176, 176, 0.855);
-  }
-  canvas#simscreen {
-    margin-left: 20px;
-  }
-  div#commentboxright {
-    left: 300px;
   }
 }
 
@@ -163,19 +139,6 @@ em:current font size
   }
   .canvas__div {
     grid-template-columns: 1fr;
-  }
-  .canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-top: 1px solid rgba(177, 176, 176, 0.855);
-  }
-  canvas#simscreen {
-    margin-left: 20px;
-  }
-  div#commentboxright {
-    left: 200px;
   }
 }
 
@@ -198,30 +161,14 @@ em:current font size
     height: 0.6rem;
   }
   .logo-div {
-    width: 8.5rem;
-    padding: 0.8rem 0 0.8rem 3.3rem;
+    width: 6rem;
   }
-  .main__task-div:nth-child(4) {
-    margin-bottom: 6rem;
-  }
+
   .circuit-dia {
     width: 40%;
   }
   .cross-img {
     width: 60%;
-  }
-  .canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
-    border: none;
-    border-top: 1px solid rgba(177, 176, 176, 0.855);
-  }
-  canvas#simscreen {
-    margin-left: 20px;
-  }
-  div#commentboxright {
-    left: 150px;
   }
 }
 
@@ -229,14 +176,6 @@ em:current font size
 /* Below 540px (Smaller Tablets) */
 /* **************************** */
 @media (max-width: 34em) {
-  .title-div-container {
-    padding: 0.5rem 0.5rem 0rem 0.5rem;
-  }
-  .container {
-    padding: 0.5rem;
-    gap: 1rem;
-  }
-
   .title-div h1 {
     padding: 0.2rem;
 
@@ -262,9 +201,9 @@ em:current font size
     display: inline-block;
     font-size: 1.5rem;
   }
-  .main {
-    gap: 0.5rem;
-  }
+  /* .main {
+    margin-top: 0.05rem;
+  } */
   .main-section {
     gap: 0.5rem;
   }
@@ -285,17 +224,6 @@ em:current font size
   }
   .tooltip {
     font-size: 1rem;
-  }
-  canvas#simscreen {
-    margin-left: 20px;
-  }
-  div#commentboxleft {
-    font-size: 14px;
-  }
-
-  div#commentboxright {
-    font-size: 14px;
-    left: 35px;
   }
 }
 @media (max-width: 27em) {
